--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>profile information</h1>
+	<header>
+		<nav>
+			<ul>
+				<li>profile</li>
+				<li>address</li>
+				<li>education</li>
+			</ul>
+		</nav>
+	</header>
+	<img src="#" alt="photo dikhi tmhe">
     <script type="text/javascript" src="./script.js">
 </script>
 
