--- a/main.html
+++ b/main.html
@@ -1,27 +1,43 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accessible Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<h1>profile information</h1>
-	<header>
-		<nav>
-			<ul>
-				<li>profile</li>
-				<li>address</li>
-				<li>education</li>
-			</ul>
-		</nav>
-	</header>
-	<img src="#" alt="photo dikhi tmhe">
-    <script type="text/javascript" src="./script.js">
-</script>
+    <header>
+        <h1 role="heading">My Portfolio</h1>
+        <nav role="navigation">
+            <ul>
+                <li><a href="#about" role="listitem">About Me</a></li>
+                <li><a href="#projects" role="listitem">Projects</a></li>
+                <li><a href="#contact" role="listitem">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <section id="about">
+            <h2 role="heading">About Me</h2>
+            <p><img src="profile.jpg" alt="A photo of me" role="img"></p>
+            <p role="paragraph">I am a web developer passionate about creating accessible and user-friendly websites.</p>
+        </section>
+
+        <section id="projects">
+            <h2 role="heading">Projects</h2>
+            <ul role="list">
+                <li role="listitem">Project 1: Portfolio Website</li>
+                <li role="listitem">Project 2: Accessible Blog</li>
+                <li role="listitem">Project 3: E-commerce Site</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer id="contact">
+        <h2 role="heading">Contact</h2>
+        <p role="paragraph">You can reach me at <a href="mailto:contact@example.com" role="listitem">contact@example.com</a>.</p>
+    </footer>
 </body>
-
 </html>
